--- a/.github/workflows/ms-dev-ecr-deploy.yml
+++ b/.github/workflows/ms-dev-ecr-deploy.yml
@@ -250,7 +250,7 @@ jobs:
           ##### END FOR AQA TESTING ####
 
   deploy:
-    needs: upload
+#    needs: upload
     name: ArgoCD Deploy
     runs-on: ubuntu-latest
 
