--- a/.github/workflows/ms-dev-ecr-deploy.yml
+++ b/.github/workflows/ms-dev-ecr-deploy.yml
@@ -159,10 +159,10 @@ jobs:
 #          path: 'iam-qa-automation'
 #          fetch-depth: 1
 #
-#      - name: Install Google Chrome
-#        run: |
-#          $GITHUB_WORKSPACE/workflow-scripts/dev/installChromeF.sh
-#          chmod +x ./gradlew
+      - name: Install Google Chrome
+        run: |
+          $GITHUB_WORKSPACE/workflow-scripts/dev/installChromeF.sh
+          chmod +x ./gradlew
 #      - name: Build with Gradle
 #        env:
 #          DEV_ENV: ${{ inputs.DEV_ENV }}
