Test gradle caching in CI part

--- a/.github/test-workflows/ms-dev-deploy.yml
+++ b/.github/test-workflows/ms-dev-deploy.yml
@@ -93,6 +93,7 @@ jobs:
         with:
           distribution: ${{ inputs.JAVA_VERSION_DISTRIBUTION }}
           java-version: ${{ inputs.JAVA_VERSION }}
+          cache: gradle
 
       - name: Build with Gradle
         env:
