--- a/.github/workflows/ms-promote-qa-stage.yml
+++ b/.github/workflows/ms-promote-qa-stage.yml
@@ -133,19 +133,9 @@ jobs:
         run: |
           $GITHUB_WORKSPACE/workflow-scripts/promote-qa-stage/create-local-changes.sh
 
-
       - name: Commit files
         run: |
           $GITHUB_WORKSPACE/workflow-scripts/promote-qa-stage/commit-files.sh
-          
-
-      - name: checkout MS Repo
-        uses: actions/checkout@v3
-        with:
-          repository: 'ananasGit/github-actions-workflow-templates-scripts'
-          token: ${{ secrets.CHECKOUT_TOKEN }}
-          path: 'workflow-scripts'
-          fetch-depth: 1
 
       - name: Tag ms repo origin
         run: |
@@ -156,7 +146,16 @@ jobs:
     runs-on: ubuntu-latest
     needs: get_commit_hash
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 1
+
+      - uses: actions/checkout@v3
+        with:
+          repository: 'ananasGit/github-actions-workflow-templates-scripts'
+          token: ${{ secrets.CHECKOUT_TOKEN }}
+          path: 'workflow-scripts'
+          fetch-depth: 1
 
       - name: Configure AWS credentials DEV
         uses: aws-actions/configure-aws-credentials@v1
@@ -175,10 +174,9 @@ jobs:
           ECR_REGISTRY_DEV: ${{ steps.login-ecr-dev.outputs.registry }}
           ECR_REPOSITORY: ${{ inputs.ECR_REPOSITORY }}
           IMAGE_TAG_DEV: ${{ inputs.IMAGE_NAME_TAG }}
+          IMAGE_TAG: ${{needs.get_commit_hash.outputs.app_qa_commit_hash}}
         run: |
-          # Pull image from ecr dev
-          echo "$ECR_REGISTRY_DEV/$ECR_REPOSITORY:$IMAGE_TAG_DEV-${{needs.get_commit_hash.outputs.app_qa_commit_hash}}"
-          docker pull $ECR_REGISTRY_DEV/$ECR_REPOSITORY:$IMAGE_TAG_DEV-${{needs.get_commit_hash.outputs.app_qa_commit_hash}}
+          $GITHUB_WORKSPACE/workflow-scripts/promote-qa-stage/promote-pull-image-from-qa-ecr.sh
 
       - name: Configure AWS credentials Prod
         uses: aws-actions/configure-aws-credentials@v1
@@ -198,7 +196,6 @@ jobs:
           ECR_REGISTRY_DEV: ${{ steps.login-ecr-dev.outputs.registry }}
           ECR_REPOSITORY: ${{ inputs.ECR_REPOSITORY }}
           IMAGE_TAG_DEV: ${{ inputs.IMAGE_NAME_TAG }}
+          IMAGE_TAG: ${{ inputs.IMAGE_NAME_TAG }}
         run: |
-          # Tag and push image to prod ECR
-          docker image tag $ECR_REGISTRY_DEV/$ECR_REPOSITORY:$IMAGE_TAG_DEV-${{needs.get_commit_hash.outputs.app_qa_commit_hash}} $ECR_REGISTRY_PROD/$ECR_REPOSITORY:$IMAGE_TAG_DEV-${{needs.get_commit_hash.outputs.app_qa_commit_hash}}
-          docker image push --all-tags $ECR_REGISTRY_PROD/$ECR_REPOSITORY
+          $GITHUB_WORKSPACE/workflow-scripts/promote-qa-stage/promote-push-image-to-prod-ecr.sh
