--- a/.github/workflows/fe-ms-qa-deploy.yaml
+++ b/.github/workflows/fe-ms-qa-deploy.yaml
@@ -46,9 +46,9 @@ on:
       CHECKOUT_TOKEN:
         description: checkout token
         required: true
-      NPM_TOKEN:
-        description: npm token
-        required: true
+    #  NPM_TOKEN:
+     #   description: npm token
+     #   required: false
 
 name: QA - deploy
 jobs:
