--- a/.github/workflows/fe-ms-qa-deploy.yaml
+++ b/.github/workflows/fe-ms-qa-deploy.yaml
@@ -174,6 +174,10 @@ jobs:
         continue-on-error: true
 
       - name: Deploy static site to S3 bucket
+        env:
+          S3_BUCKET: ${{ inputs.S3_BUCKET }}
+          NPM_BUILD_FOLDER: ${{ inputs.NPM_BUILD_FOLDER }}
+          AWS_CLOUDFRONT_ID: ${{ inputs.AWS_CLOUDFRONT_ID }}
         run: |
           $GITHUB_WORKSPACE/workflow-scripts/qa/deploy-static-site-to-s3.sh
       - name: Tag ms repo origin
