--- a/.github/workflows/fe-ms-dev-deploy.yaml
+++ b/.github/workflows/fe-ms-dev-deploy.yaml
@@ -97,7 +97,8 @@ jobs:
         env:
           BUILD_ENV: ${{ inputs.BUILD_ENV }}
         run: |
-          $GITHUB_WORKSPACE/workflow-scripts/dev/npm-install-dependencies.sh
+          npm install
+          npm run build:${{ env.BUILD_ENV }}
 
       - name: SonarQube Scan
         if: |
