--- a/.github/workflows/fe-ms-dev-deploy.yaml
+++ b/.github/workflows/fe-ms-dev-deploy.yaml
@@ -96,6 +96,7 @@ jobs:
       - name: Install NPM dependencies
         env:
           BUILD_ENV: ${{ inputs.BUILD_ENV }}
+          CHECKOUT_TOKEN: ${{ secrets.CHECKOUT_TOKEN }}
         run: |
           $GITHUB_WORKSPACE/workflow-scripts/dev/npm-install-dependencies.sh
 
