--- a/.github/workflows/fe-ms-dev-deploy.yaml
+++ b/.github/workflows/fe-ms-dev-deploy.yaml
@@ -97,6 +97,7 @@ jobs:
         env:
           BUILD_ENV: ${{ inputs.BUILD_ENV }}
           CHECKOUT_TOKEN: ${{ secrets.CHECKOUT_TOKEN }}
+          NPM_BUILD_FOLDER: ${{ inputs.NPM_BUILD_FOLDER }}
         run: |
           $GITHUB_WORKSPACE/workflow-scripts/dev/npm-install-dependencies.sh
 
