NNS-2546 -> reusable workflow (dev)

--- a/.github/workflows/fe-ms-dev-deploy.yaml
+++ b/.github/workflows/fe-ms-dev-deploy.yaml
@@ -72,20 +72,12 @@ jobs:
           token: ${{ secrets.CHECKOUT_TOKEN }}
           path: 'workflow-scripts'
 
-      - name: Install NPM dependencies
-        env:
-          BUILD_ENV: ${{ inputs.BUILD_ENV }}
-          CHECKOUT_TOKEN: ${{ secrets.CHECKOUT_TOKEN }}
-          NPM_BUILD_FOLDER: ${{ inputs.NPM_BUILD_FOLDER }}
-        run: |
-          npm install
-          nmp run build:${{ env.BUILD_ENV }}
-
       - name: Add secrets in .npmrc
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
           $GITHUB_WORKSPACE/workflow-scripts/dev/add-secrets-in-npm.sh
+
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -101,7 +93,14 @@ jobs:
           inputs.FEATURE_FLAGS == 'true'
         run: |
           $GITHUB_WORKSPACE/workflow-scripts/dev/feature-flags-tracker.sh
-      
+
+      - name: Install NPM dependencies
+        env:
+          BUILD_ENV: ${{ inputs.BUILD_ENV }}
+          CHECKOUT_TOKEN: ${{ secrets.CHECKOUT_TOKEN }}
+          NPM_BUILD_FOLDER: ${{ inputs.NPM_BUILD_FOLDER }}
+        run: |
+          $GITHUB_WORKSPACE/workflow-scripts/dev/npm-install-dependencies.sh
 
       - name: SonarQube Scan
         if: |
