--- a/.github/workflows/fe-ms-dev-deploy.yaml
+++ b/.github/workflows/fe-ms-dev-deploy.yaml
@@ -33,13 +33,9 @@ on:
         type: string
         description: sonarqube
         required: false
-      SONARQUBE_PROJECT_NAME:
-        type: string
-        description: sonarqube project name
-        required: false
       SONARQUBE:
         type: string
-        description: sonarqube
+        description: is it used
         required: false
     secrets:
       AWS_REGION:
@@ -66,7 +62,7 @@ on:
 
 name: DEV - Deploy
 jobs:
-  build:
+  deploy:
     name: Deploy on env
     runs-on: ubuntu-latest
     steps:
@@ -92,20 +88,27 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: ${{ inputs.NODE_VERSION }}
-      - name: Generate active feature flags file
-        if: |
-          inputs.FEATURE_FLAGS == 'true'
-        run: |
-          $GITHUB_WORKSPACE/workflow-scripts/dev/feature-flags-tracker.sh
-
       - name: Install NPM dependencies
         env:
           BUILD_ENV: ${{ inputs.BUILD_ENV }}
-          CHECKOUT_TOKEN: ${{ secrets.CHECKOUT_TOKEN }}
-          NPM_BUILD_FOLDER: ${{ inputs.NPM_BUILD_FOLDER }}
         run: |
-          $GITHUB_WORKSPACE/workflow-scripts/dev/npm-install-dependencies.sh
+          npm install
+          npm run build:${{ env.BUILD_ENV }}
 
+      - name: Generate active feature flags file
+        if: ${{ inputs.FEATURE_FLAGS }} == 'true'
+        run: |
+          $GITHUB_WORKSPACE/workflow-scripts/dev/feature-flags-tracker.sh
+
+      - name: SonarQube Scan
+        if: ${{ inputs.SONARQUBE }} == 'true'
+        uses: kitabisa/sonarqube-action@v1.2.0
+        with:
+          host: ${{ secrets.SONARQUBE_HOST }}
+          login: ${{ secrets.SONARQUBE_TOKEN }}
+          projectKey: ${{ env.SONARQUBE_PROJECT_KEY }}
+          projectName: ${{ env.SONARQUBE_PROJECT_NAME }}
+          projectVersion: ${{ github.sha }}
       - name: Deploy static site to S3 bucket
         env:
           S3_BUCKET: ${{ inputs.S3_BUCKET }}
