NNS-2546 -> dev workflow

--- a/.github/workflows/fe-ms-dev-deploy.yaml
+++ b/.github/workflows/fe-ms-dev-deploy.yaml
@@ -108,13 +108,13 @@ jobs:
           $GITHUB_WORKSPACE/workflow-scripts/dev/feature-flags-tracker.sh
 
       - name: SonarQube Scan
-        if: ${{ inputs.SONARQUBE }} == 'true'
         uses: kitabisa/sonarqube-action@v1.2.0
-        with:
+        if: inputs.SONARQUBE != ''
+        env:
           host: ${{ secrets.SONARQUBE_HOST }}
           login: ${{ secrets.SONARQUBE_TOKEN }}
-          projectKey: ${{ env.SONARQUBE_PROJECT_KEY }}
-          projectName: ${{ env.SONARQUBE_PROJECT_NAME }}
+          projectKey: ${{ inputs.SONARQUBE_PROJECT_KEY }}
+          projectName: ${{ inputs.SONARQUBE_PROJECT_NAME }}
           projectVersion: ${{ github.sha }}
       - name: Deploy static site to S3 bucket
         env:
