NNS-2546 -> workflow dev

--- a/.github/workflows/fe-ms-dev-deploy.yaml
+++ b/.github/workflows/fe-ms-dev-deploy.yaml
@@ -99,7 +99,7 @@ jobs:
           npm run build:${{ env.BUILD_ENV }}
 
       - name: Generate active feature flags file
-        if: ${{ inputs.FEATURE_FLAGS }} == 'true'
+        if: inputs.FEATURE_FLAGS  == 'true'
         run: |
           $GITHUB_WORKSPACE/workflow-scripts/dev/feature-flags-tracker.sh
 
