--- a/.github/workflows/fe-ms-stage-deploy.yaml
+++ b/.github/workflows/fe-ms-stage-deploy.yaml
@@ -65,7 +65,8 @@ jobs:
           ref: ${{ github.event.inputs.git-ref }}
 
       - uses: actions/checkout@v3
-
+        with:
+          fetch-depth: 1
       - uses: actions/checkout@v3
         with:
           repository: 'ananasGit/github-actions-workflow-templates-scripts'
