--- a/.github/workflows/fe-ms-stage-deploy.yaml
+++ b/.github/workflows/fe-ms-stage-deploy.yaml
@@ -66,7 +66,7 @@ jobs:
 
       - uses: actions/checkout@v3
         with:
-          fetch-depth: *
+          fetch-depth: 2
       - uses: actions/checkout@v3
         with:
           repository: 'ananasGit/github-actions-workflow-templates-scripts'
