--- a/.github/workflows/fe-ms-stage-deploy.yaml
+++ b/.github/workflows/fe-ms-stage-deploy.yaml
@@ -100,7 +100,7 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           token: ${{ secrets.CHECKOUT_TOKEN }}
         run: |
-          npm install
+          npm ci
           npm run build:${{ inputs.BUILD_ENV }}
 
       - name: Deploy static site to S3 bucket
