--- a/.github/workflows/fe-ms-stage-deploy.yaml
+++ b/.github/workflows/fe-ms-stage-deploy.yaml
@@ -51,18 +51,7 @@ jobs:
     name: Deploy on env
     runs-on: ubuntu-latest
     steps:
-      - name: Clone Repository (Latest)
-        uses: actions/checkout@v2
-        if: github.event.inputs.git-ref == ''
-        with:
-          ref: master
 
-      - name: Clone Repository (Custom Ref)
-        uses: actions/checkout@v2
-        if: github.event.inputs.git-ref != '' &&
-          inputs.REF == 'false'
-        with:
-          ref: ${{ github.event.inputs.git-ref }}
 
       - uses: actions/checkout@v3
         with:
@@ -98,9 +87,9 @@ jobs:
       - name: Install NPM dependencies
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          token: ${{ secrets.CHECKOUT_TOKEN }}
+          CHECKOUT_TOKEN: ${{ secrets.CHECKOUT_TOKEN }}
         run: |
-          npm ci
+          npm install
           npm run build:${{ inputs.BUILD_ENV }}
 
       - name: Deploy static site to S3 bucket
