--- a/.github/workflows/fe-ms-stage-deploy.yaml
+++ b/.github/workflows/fe-ms-stage-deploy.yaml
@@ -51,6 +51,10 @@ jobs:
     name: Deploy on env
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 1
       - name: Clone Repository (Latest)
         uses: actions/checkout@v2
         if: github.event.inputs.git-ref == ''
