--- a/.github/workflows/fe-ms-prod-deploy.yaml
+++ b/.github/workflows/fe-ms-prod-deploy.yaml
@@ -49,6 +49,18 @@ jobs:
     steps:
       - name: Clone Replositorie(Latest)
         uses: actions/checkout@v3
+      - name: Clone Repository (Latest)
+        uses: actions/checkout@v2
+        if: github.event.inputs.git-ref == ''
+        with:
+          ref: master
+
+      - name: Clone Repository (Custom Ref)
+        uses: actions/checkout@v2
+        if: github.event.inputs.git-ref != '' &&
+          inputs.REF == 'false'
+        with:
+          ref: ${{ github.event.inputs.git-ref }}
       - uses: actions/checkout@v3
         with:
           repository: 'ananasGit/github-actions-workflow-templates-scripts'
