--- a/.github/workflows/fe-ms-prod-deploy.yaml
+++ b/.github/workflows/fe-ms-prod-deploy.yaml
@@ -55,8 +55,7 @@ jobs:
 
       - name: Clone Repository (Custom Ref)
         uses: actions/checkout@v2
-        if: github.event.inputs.git-ref != '' &&
-          inputs.REF == 'false'
+        if: github.event.inputs.git-ref != ''
         with:
           ref: ${{ github.event.inputs.git-ref }}
       - uses: actions/checkout@v3
