try to fix ms-promote-qa-stage.yml

--- a/.github/workflows/ms-promote-qa-stage.yml
+++ b/.github/workflows/ms-promote-qa-stage.yml
@@ -193,6 +193,9 @@ jobs:
       - name: Tag, and push image to Amazon ECR prod
         id: push-image
         env:
+          AWS_REGION: eu-central-1
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID_PROD }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_PROD }}
           ECR_REGISTRY_PROD: ${{ steps.login-ecr-prod.outputs.registry }}
           ECR_REGISTRY_DEV: ${{ steps.login-ecr-dev.outputs.registry }}
           ECR_REPOSITORY: ${{ inputs.ECR_REPOSITORY }}
